feat: create user/auth feature with mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=transit_server
 server.port=8085
+spring.data.mongodb.uri=${MONGO_DB_URI}
+spring.data.mongodb.database=TransitApp
